# b_data_product

./: .gitignore  BUG_FIX_COLUMN_UNIQUENESS.md  COLUMN_UNIQUENESS_FIX_SUMMARY.md  COLUMN_UNIQUENESS_FIX_TECHNICAL.md  COLUMN_UNIQUENESS_QUICK_REF.md  ENUM_VALIDATION_FIX.md  LEGACY_REFACTORING_SUMMARY.md  MIGRATION_SOURCE_ALIGNED_DP_REMOVAL.md  README.md  atlas_metadata_simple.xlsx  clean_up_atlas.py  create_entities_with_pydantic.py  ingest_workbook_to_atlas.py  pydantic_models.csv  pydantic_models.xlsx  pyproject.toml  recreate_data_products_from_workbook.py  requirements.txt  run_tests.py  scb_cli.py  scb_dp.py  scb_dp_cli.py  scb_dp_search.py  scb_enums.py  scb_types.py  setup_atlas.sh  test_enum_fix.py  test_lineage_fix.sh
apache-atlas/: DEPLOYMENT_COMPLETE.md  atlas-apirule.yaml  atlas-claim0-persistentvolumeclaim.yaml  atlas-claim1-persistentvolumeclaim.yaml  atlas-deployment.yaml  atlas-namespace.yaml  atlas-service.yaml  deploy.sh  kustomization.yaml
docker-k8s/: .dockerignore  BEFORE_AND_AFTER.md  BUILD_RESOLUTION.md  DOCKER_BUILD_RESOLUTION.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  START_HERE.md
docs/: 503_ERROR_TROUBLESHOOTING_SETUP.md  ANCHOR_LINKS_FIXED.md  ARCHITECTURE_DEEP_DIVE.md  ARCHITECTURE_DOCUMENTATION_INDEX.md  ARCHITECTURE_GENERATION_SUMMARY.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_VISUAL_SUMMARY.md  ATLAS_SETUP_GUIDE.md  CLAUDE.md  COMPONENT_INTERACTION_DIAGRAM.md  CONTAINER_FAILED_TO_START.md  CONTAINER_STARTUP_GUIDE_SUMMARY.md  CREATE_ENTITIES_QUICK_START.md  (+26 more)
(+114 files in other folders)
