[project]
name = "scb_atlas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-atlas>=0.0.16",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "typer>=0.24.0",
]
[project.scripts]
scb = "scb_dp_cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
